--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
         }
         debug{
             testCoverageEnabled true
+            debuggable true
         }
     }
     dataBinding{
