--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion '27.0.3'+
+    
+    aaptOptions {  
+    cruncherEnabled = false  
+    useNewCruncher = false
+} 
     defaultConfig {
         applicationId "com.buvanesh.task"
         minSdkVersion 19
